@@ -1,4 +1,5 @@
 - Improvement: Add slot to indicate if lesson is extraordinary
+- Bug fix: When setting a country as default, unset the previous one
 - Bug fix: Fixed photograph deletion by removing relation with photo approver
 
 32.7.5 (23-02-2021)
